Nav bugfixes (remove font-size from Select styles), draft for Camera PhoneGap example

--- a/css/src/_text.scss
+++ b/css/src/_text.scss
@@ -4,8 +4,6 @@
 $base-font: Helvetica, Arial, sans-serif; 
 $readable-font: 'Palatino Linotype', 'Book Antiqua', Palatino, 'Droid Serif', serif;
 $base-font-size: 62.5%;
-$base-line-height: 1.231; 
-
 
 /* ==========================================================================
 Typography 
